# opensim-core-examples

./: .gitignore  README.md  clangd-wrapper.sh
C3DInverseKinematics/: main.cpp
C3DParser/: main.cpp
C3DParser/data/: l_comf_01.c3d
C3DParserBulk/: main.cpp
C3DParserDir/: CMakeLists.txt  main.cpp
CustomActuatorExample/: toyLeg_example.cpp
CustomActuatorExampleV2/: CMakeLists.txt  toyLeg_example.cpp
DefaultBlockRemove/: default-block-remove.py
ExampleHopperDevice/: CMakeLists.txt  defineDeviceAndController.h  exampleHopperDevice.cpp
FloatingPointPrecision/: CMakeLists.txt  main.cpp
IMUCalibration/: main.cpp
IMUCalibration/data/: gait2392_imuPlacer.xml
IMUDistanceAnalysis/: main.cpp
IMUIKBulk/: CMakeLists.txt  main.cpp
IMUIKBulk/data/: kg_IK_Tasks_uniform.xml  setup_IMUInverseKinematics_trial.xml  setup_OrientationWeightSet_pelvis.xml  setup_OrientationWeightSet_pelvis_calcn.xml  setup_OrientationWeightSet_pelvis_tibia.xml  setup_OrientationWeightSet_pelvis_tibia_calcn.xml  setup_OrientationWeightSet_tibia_calcn.xml  setup_OrientationWeightSet_uniform.xml
IMUIKLocalProblem/: CMakeLists.txt  benchmark.txt  main.cpp
IMUIKTriangleInequality/: CMakeLists.txt  main.cpp
IMUIKTriangleInequality/data/: model_Rajagopal2015_posed.osim
IMUInverseKinematics/: main.cpp
IMUInverseKinematics/data/: l_comf_01-000_orientations-unif.sto  l_comf_01_orientations.sto  setup_IMUInverseKinematics_trial.xml
IMUPlacer/: CMakeLists.txt  main.cpp
IMUPlacer/data/: Rajagopal2015_imuPlacer.xml  l_comf_01-000_orientations.sto
IMUPlacerBulk/: CMakeLists.txt  main.cpp
IMUPointKinematics/: main.cpp
IMUTruncate/: main.py
IMUXsens/: main.cpp
IMUXsens/data/: myIMUMappings_pelvis_calcn.xml  myIMUMappings_pelvis_calcn_tibia.xml
IMUXsens/data/test/: l_comf_01-000_00B42D4E.txt  l_comf_01-000_00B42DA2.txt  l_comf_01-000_00B42DA3.txt
IMUXsensBulk/: main.cpp
IMUXsensBulkV2/: main.cpp
IMUXsensV2/: CMakeLists.txt  main.cpp
IMUXsensV2/data/test/: synthetic_trial01_comma-SYNTH-ABCD.txt  synthetic_trial01_comma-SYNTH-EFGH.txt  synthetic_trial01_comma-SYNTH-IJKL.txt  synthetic_trial01_comma-SYNTH-MNOP.txt  synthetic_trial01_space-SYNTH-ABCD.txt  synthetic_trial01_space-SYNTH-EFGH.txt  synthetic_trial01_space-SYNTH-QRST.txt  synthetic_trial01_tab-SYNTH-ABCD.txt  synthetic_trial01_tab-SYNTH-IJKL.txt  synthetic_trial01_tab-SYNTH-MNOP.txt  synthetic_trial01_tab-SYNTH-QRST.txt
IMUXsense/: main.cpp
IMUXsense/data/: myIMUMappings.xml
IMUXsense/data/test/: l_comf_01-000_00B42D48.txt  l_comf_01-000_00B42D4D.txt  l_comf_01-000_00B42D53.txt  l_comf_01-000_00B42DAE.txt
IMUXsenseBulk/: main.cpp
IMUXsenseV2/: main.cpp
IMUXsenseV2/data/: myIMUMappings.xml
IMUXsenseV2/data/test/: synthetic_trial01_comma-SYNTH-QRST.txt  synthetic_trial01_space-SYNTH-IJKL.txt  synthetic_trial01_space-SYNTH-MNOP.txt  synthetic_trial01_tab-SYNTH-EFGH.txt  synthetic_trial01_tab_accelerations.sto  synthetic_trial01_tab_gyros.sto  synthetic_trial01_tab_magnetometers.sto  synthetic_trial01_tab_orientations.sto
InitializerLists/: main.cpp
LowPassFilterTime/: main.cpp
LowPassFilterTime/data/: ik_l_comf_01-000_orientations-unif.mot
MarkerIKBulk/: CMakeLists.txt  main.cpp
MarkerIKBulk/data/: kg_IK_Tasks_uniform.xml  kuopio_base_IK_Tasks_uniform.xml  setup_InverseKinematics.xml
MarkerInverseKinematics/data/: l_comf_01_markers.trc  subject01_Setup_InverseKinematics.xml
MinControlDefaultRepair/: min-control-default-reapir.py
ModelLoadBug/: main.cpp
ModelLoadBug/data/: kg_gait2392_thelen2003muscle_Scale_MarkerSet_BROKEN.xml  kg_gait2392_thelen2003muscle_Scale_MarkerSet_WORKING.xml
PathTesting/: main.cpp
ScaleTool/: CMakeLists.txt  main.cpp
ScaleTool/data/: kg_gait2392_thelen2003muscle_Scale_MarkerSet.xml  subject01_calib_static_markers.trc  subject01_calib_static_markers_rotated.trc  subject01_kg_gait_gait2392_thelen2003muscle_Setup_Scale.xml
ScaleToolBulk/: CMakeLists.txt  main.cpp
ScaleToolBulk/data/: gait2392_thelen2003muscle.osim  info_participants.csv  kg_gait2392_thelen2003muscle_Scale_MarkerSet.xml  kg_gait_gait2392_thelen2003muscle_Setup_Model_Scaler.xml  kg_gait_gait2392_thelen2003muscle_Setup_Scale.xml
TriangleInequalityRepair/: repair-triangle-inequality.py
